# coreason-inference

./: .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md  product_requirements.md
scripts/: fix_mypy_tests_v2.py  fix_test_lines_v2.py
src/coreason_inference/: __init__.py  engine.py  estimator.py  main.py  schema.py  server.py
src/coreason_inference/analysis/: active_scientist.py  dynamics.py  estimator.py  latent.py  rule_inductor.py  virtual_simulator.py
src/coreason_inference/utils/: logger.py
tests/: conftest.py  test_active_scientist.py  test_active_scientist_intelligence.py  test_bug_data_amnesia.py  test_dynamics.py  test_dynamics_complex.py  test_dynamics_coverage.py  test_dynamics_coverage_extra.py  test_dynamics_notears.py  test_dynamics_sparsity.py  test_dynamics_sparsity_complex.py  test_engine.py  test_engine_async.py  test_engine_complex.py  test_engine_explainability.py  test_engine_explainability_complex.py  test_engine_optimization.py  test_engine_optimization_complex.py  test_engine_sync.py  test_estimator.py  test_estimator_advanced.py  test_estimator_complex.py  test_estimator_coverage.py  test_estimator_coverage_extra.py  test_estimator_edge_cases.py  test_estimator_failure.py  test_estimator_heterogeneity.py  test_estimator_heterogeneity_complex.py  test_estimator_personalized.py  test_estimator_refutation.py  test_integration_virtual.py  test_latent.py  test_latent_complex.py  test_latent_factor.py  test_latent_generation_consistency.py  test_latent_interpretation.py  test_main.py  test_refactoring_audit.py  test_refutation_edge_cases.py  test_rule_inductor.py  (+8 more)
